Version 2.10.1 (unreleased)

* New feature: Fit diagrams in view after applying layout to get better overview
* Update zoom slider and percent value when switching diagrams
* Made "Fit" button working
* Fixed scene limits when moving widgets and/or loading xmi files

Version 2.10.0

* New feature: Line based grid drawing
* TreeView to diagram class drag problem (292042)
* Extend class debug filter (309770)
* UML diagrams outside image problem (309452)
* some state diagram widgets could not be added (309064)
* no classes displayed after xmi file loading (309007)
* wrong origin of classes in print page preview (308959)
* migrate remaining qt3 classes to qt4 (290952)
* clicking undo twice in a row crashes Umbrello (119868)
* Umbrello crashes after undo action (266789)
* Segfault when loading a saved document (180145)
* unsorted operation list in add message widget property dialog of sequence diagrams (303263)
* Assertion on c++ import (303222)
* umbrello fails to parse escape sequences in c++ preprocessor statements (303137)

Version 2.9.0

* New feature: Drawing of state diagrams with more pseudostates possible.
* New feature: Export diagrams to graphviz dot format
* New feature: Auto layout of diagrams using external dot generator
* unsorted operation list in add message widget property dialog of sequence diagrams (303263)
* Assertion on c++ import (303222)
* umbrello fails to parse escape sequences in c++ preprocessor statements (303137)
* umbrello freezes on c++ import (302671)
* Segfault importing Java code (230770)
* Crash on new synchronous message in sequence diagram (168752)
* Segmentation fault when copy&paste of sequence diagram (287179)
* Hypergraphic and hierarchy links (67062)
* umbrello hangs on import of qatomic_x86_64.h (302384)
* layout generator auto detection (301969)
* category widget drawing problem (301595)
* Note widgets get resized when printing (152757)
* Note widget text is not editable through doc window (301181)